Fixed Google Map not showing on Order page.
The problem was due to a calc() function in the css for the map-canvas.
I deleted it because it had no meaning (100% - 0px).
In future to support firefox browsers plase use -moz-calc() function when
neccessary.

--- a/paisUser.css
+++ b/paisUser.css
@@ -55,7 +55,6 @@ body{
 #map-canvas {
 	width:100%;
     height: 80%;
- 	height:calc(100% - 0px);
 }
 
 #map-canvas-results {
